Added SOLID + extended conclusion

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -68,6 +68,13 @@
   urldate = {2021-04-04},
 }
 
+@Online{Ilyana,
+  author = {Ilyana},
+  title  = {Dependency Injection},
+  url    = {https://deviq.com/practices/dependency-injection},
+ date   = {2020-12-14},
+}
+
 @Online{FowlerDisObj,
   author  = {Martin Fowler},
   date    = {2014-08-13},
@@ -81,6 +88,13 @@
   date   = {2008-01-01},
   title  = {Fallacies of Distributed Computing Explained},
   url    = {https://www.researchgate.net/publication/322500050_Fallacies_of_Distributed_Computing_Explained},
+}
+
+@Online{Thelma,
+  author = {Ugonna Thelma},
+  date   = {2020-05-18},
+  title  = {The S.O.L.I.D. Principles in Pictures},
+  url    = {https://medium.com/backticks-tildes/the-s-o-l-i-d-principles-in-pictures-b34ce2f1e898},
 }
 
 @Online{Richardson,
