--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -17,9 +17,13 @@
 De opzet van dit onderzoek is om een antwoord te geven op de onderzoeksvragen “Welk dataformaat is performanter voor de Discovery API van de Fashion Society?”, “Is gRPC met ProtocolBuffers sneller dan REST API met JSON voor de implementatie van de Fashion Society?” en “Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van de Fashion Society?”.
 De conclusie is afhankelijk van de drie uitgevoerde testen, single call response time, totale response tijd voor vierduizend parallelle calls en totale response tijd voor tienduizend parallelle calls, die voor de methode GetService en GetServiceUrl zijn uitgevoerd.
 
-Uit het onderzoek kunnen twee van de drie onderzoeksvragen beantwoord worden. Er kan geconcludeerd worden dat gRPC met ProtocolBuffers sneller is dan REST met JSON voor de implementatie van The Fasion Society en dat ProtocolBuffers performanter zijn dan JSON voor de implementatie van de Fashion Society.
+Uit het onderzoek kunnen twee van de drie onderzoeksvragen beantwoord worden. Uit het onderzoek kan geconcludeerd worden dat gRPC met ProtocolBuffers sneller is dan REST met JSON voor de implementatie van The Fasion Society en dat ProtocolBuffers performanter zijn dan JSON voor de implementatie van de Fashion Society. Deze conclusies zijn getrokken uit de resultaten van de proof-of-concept waaruit blijkt dat gRPC met Protobufs in zowel single call, kleine payload als grote payload sneller is dan REST met JSON.
 
 Op de onderzoeksvraag “Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van de Fashion Society?” kan geen antwoord gegeven worden omdat deze gegevens niet exact meetbaar waren gedurende het uitvoeren van de proof-of-concept. Hierbij is in overleg met de co-promotor het besluit gevormd dat de Fashion Society een snel groeiend bedrijf is waarbij performantie belangrijk is en dat als er meer CPU gebruik zou zijn dit een prijs is dat het bedrijf gewillig is om te betalen in ruil voor een performantere implementatie.
+
+Dankzij dit onderzoek heeft de Fashion Society een beter inzicht in zowel gRPC en Protobufs zelf als in de effecten die het heeft op de performantie bij het overschakelen. Hierdoor kan de Fashion Society een gewogen beslissing maken om al dan niet over te schakelen naar gRPC met Protobufs.
+
+De vastgestelde antwoorden op de onderzoeksvragen waren zoals verwacht, echter zoals vermeld in \ref{sec:Resultaat Proof-Of-Concept} waren de vastgestelde waarden waarmee gRPC en Protobufs sneller waren niet zoals verwacht. De verwachting lag veel hoger in het voordeel van gRPC met Protobufs een mogelijke reden hiervoor is dat gRPC met Protobufs vooral voordeliger is bij grote data en het streamen hiervan. Dit vloeit tot een nieuwe vraag die uitnodigt tot eventueel verder onderzoek, namelijk "Is het verschil in snelheid tussen gRPC met Protobufs en REST met JSON groter in het voordeel van gRPC en Protobufs voor grotere data?". Deze mogelijke onderzoeksvraag past samen met onderzoek naar de performantie verschillen in communicatie tussen de interne services en de Discovery API voor de huidige REST implementatie van de Fashion Society en een gRPC implementatie. De communicatie tussen de interne services en de Discovery API wisselen onderling heel veel data uit dewelke kan variëren van 2 properties tot een geneste structuur die meerdere niveaus diep gaat. Deze communicatie zou dus een ideaal scenario zijn om het verschil in snelheid te testen.
 
 
 
