--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -13,7 +13,9 @@ Eerst en vooral zou ik de Fashion Society en specifiek Yoerick Lemmelijn willen 
 
 Alsook wil ik graag mijn promotor Antonia Pierreux bedanken voor de bijstand en feedback op de inhoud van deze bachelorproef, zij stond altijd klaar voor het verbeteren van een nieuwe toevoeging aan deze bachelorproef en hiervan had ik ook steeds snel de feedback, daarnaast wil ik haar ook bedanken voor het altijd klaar staan voor te antwoorden op soms, wat ik zelf kan beschrijven als domme, vragen.
 
-Tot slot zou ik ook mijn ouders, vriendin en vrienden willen bedanken voor mij te pushen op de momenten dat het nodig was zodanig dat deze bachelorproef voor de deadline zou afgeraakt zijn en om regelmatig mijn tussentijdse versies te proof readen.
+Vervolgens zou ik ook mijn ouders, vriendin en vrienden willen bedanken voor mij te pushen op de momenten dat het nodig was zodanig dat deze bachelorproef voor de deadline zou afgeraakt zijn en om regelmatig mijn tussentijdse versies te proof readen.
+
+Tot slot wil ik ook mijn medestudenten van campus Aalst bedanken voor de behulpzaamheid en alle verduidelijkingen die zij via de Discord server gegeven hebben in tijden van onzekerheid en onduidelijkheid.
 
 Bij deze wens ik u een aangename leeservaring toe.
 %% TODO:
