BAP final changes

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -25,6 +25,15 @@
   urldate = {2021-03-21},
 }
 
+@Online{Stoplight,
+  author  = {Stoplight},
+  title   = {Types of APIs and Popular REST API Protocol},
+  url     = {https://stoplight.io/api-types/},
+  urldate = {2021-05-21},
+}
+
+
+
 @Online{Long,
   author  = {Lauren Long},
   editor  = {Aditya Mukerjee; Anjana Vakil},
@@ -33,7 +42,7 @@
   urldate = {2021-03-21},
 }
 
-@Online{Hubspire,
+@Online{HubSpire,
   author  = {Hubspire},
   title   = {Application Programming Interface},
   url     = {https://www.hubspire.com/resources/general/application-programming-interface/},
