--- a/poster/conference_poster.tex
+++ b/poster/conference_poster.tex
@@ -51,11 +51,11 @@
 % The widths of these boxes can be easily edited to accommodate your content as you see fit
 
 \begin{minipage}[t]{0.75\linewidth}
-\VeryHuge \color{HoGentAccent1} \textbf{Titel van uw bachelorproef} \color{Black}\\ % Title
-\Huge\textit{Ondertitel (eventueel)}\\[2.4cm] % Subtitle
-\huge \textbf{Naam Voornaam, co-promotor, promotor}\\[0.5cm] % Author(s)
-\huge Hogeschool Gent, Valentin Vaerwyckweg 1, 9000 Gent\\[0.4cm] % University/organization
-\Large \texttt{voornaam.naam@hogent.be} \\
+\VeryHuge \color{HoGentAccent1} \textbf{Een vergelijkende studie tussen gRPC met Protocol Buffers en REST met JSON in opdracht van Fashion Society.} \color{Black}\\ % Title
+\Huge\textit{}\\[2.4cm] % Subtitle
+\huge \textbf{Pepermans Sven, Kristof Van Moorter, Antonia Pierreux}\\[0.5cm] % Author(s)
+\huge Hogeschool Gent, Arbeidstraat 14, 9300 Aalst\\[0.4cm] % University/organization
+\Large \texttt{sven.pepermans@student.hogent.be} \\
 \end{minipage}
 %
 \begin{minipage}[t]{0.25\linewidth}
@@ -76,9 +76,7 @@
 \color{HoGentAccent1} % Navy color for the abstract
 
 \begin{abstract}
-It's only a model.
-You don't vote for kings. Who's that then? We found them. Ni! Ni! Ni! Ni!
-The nose? On second thoughts, let's not go there. It is a silly place. Bloody Peasant! And the hat. She's a witch! Where'd you get the coconuts?
+
 \end{abstract}
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION
@@ -88,42 +86,34 @@ The nose? On second thoughts, let's not go there. It is a silly place. Bloody Pe
 \section*{Introductie}
 \color{black}
 \color{black}
-Be quiet! Found them? In Mercia?! The coconut's tropical! But you are dressed as one… Well, what do you want? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods.
+De Fashion Society, het overkoepelende bedrijf van wel gekende kledingketens zoals ZEB en The Fashion Store is een bedrijf dat in constante groei zit, zijnde het door overnames of door het zelf openen van nieuwe winkels. Hoe meer winkels, hoe meer data, hoe meer intern dataverkeer en tot slot hoe meer nood aan efficiëntie.
 
-Well, what do you want? It's only a model. Camelot! We found them. We shall say 'Ni' again to you, if you do not appease us.
+Momenteel maakt de Fashion Society intern gebruik van eigen microservices met behulp van REST en Json. Json is wereldwijd één van de meest gebruikte dataformaten echter wil dit niet zeggen dat dit het snelste is, laat staan het efficiëntste in samenwerking met REST. In dit onderzoek wordt er dan ook onderzocht of gRPC met Protocolbuffers al dan niet performanter is dan REST met Json.
 
-The nose? Shut up! Burn her! I am your king. You don't vote for kings.
+\begin{center}\vspace{1cm}
+	\includegraphics[width=1.0\linewidth]{Fashion_society}
+	\captionof{figure}{\color{HoGentAccent5}Fashion Society}
+\end{center}\vspace{1cm}
 
-You can't expect to wield supreme power just 'cause some watery tart threw a sword at you! Well, we did do the nose. I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave before I am forced to taunt you a second time!
-
-Why do you think that she is a witch? We want a shrubbery!! I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave before I am forced to taunt you a second time!
+Dit onderzoek is in opdracht van Fashion Society en de Proof-Of-Concept is opgesteld met bijstand Kristof Van Moorter, Developer voor Fashion Society.
 %----------------------------------------------------------------------------------------
 %	GEOLOGY
 %----------------------------------------------------------------------------------------
 
 \color{Black} % DarkSlateGray color for the rest of the content
 \color{HoGentAccent1} 
-\section*{Experimenten}
+\section*{Onderzoek}
 \color{black}
-A newt? Camelot! Why? No, no, no! Yes, yes. A bit. But she's got a wart.
+Voor deze bachelorproef is er in twee delen gewerkt, namelijk een literatuurstudie waarin de nodige context wordt uitgelegd om deze bachelorproef te kunnen volgen en een tweede deel bestaande uit een Proof-Of-Concept en de bijhorende resultaten.
 
-Shut up! I dunno. Must be a king. Who's that then? Look, my liege! On second thoughts, let's not go there. It is a silly place.
-
-Shut up! Will you shut up?! No, no, no! Yes, yes. A bit. But she's got a wart. He hasn't got shit all over him. It's only a model. It's only a model.
-
-Bring her forward! I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave 
-
-
-
-\color{HoGentAccent1} 
-\section*{Sectie met figuur}
-\color{black}
-
+In de Proof-Of-Concept zijn drie scenario's getest. Het eerste scenario is het verschil in performantie op basis van één enkele call. Deze test is tienduizend keer uitgevoerd om eventuele netwerkvertragingen en dergelijke anomalieën te vermijden.
+Het tweede scenario is het verschil in performantie op basis van een kleine payload, zijnde vierduizend parallelle calls. Dit scenario is net zoals het derde scenario, het verschil in performantie op basis van een grote payload, zijnde tienduizend parallelle calls, 4 keer uitgevoerd. 
 
 \begin{center}\vspace{1cm}
-\includegraphics[width=1.0\linewidth]{grail}
-\captionof{figure}{\color{HoGentAccent5} He hasn't got shit all over him. The nose? Where'd you get the coconuts? What do you mean? We shall say 'Ni' again to you, if you do not appease us}
+	\includegraphics[width=1.0\linewidth]{singleCall}
+	\captionof{figure}{\color{HoGentAccent5}De resultaten van de Proof-Of-Concept voor één enkele call.}
 \end{center}\vspace{1cm}
+
 
 %------------------------------------------------
 
@@ -132,7 +122,7 @@ Bring her forward! I don't want to talk to you no more, you empty-headed animal 
 \color{HoGentAccent1} 
 \section*{Conclusies}
 \color{black}
-on't underestimate the Force. Oh God, my uncle. How am I ever gonna explain this? I suggest you try it again, Luke. This time, let go your conscious self and act on instinct. Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force.
+Na het uitvoeren van de Proof-Of-Concept en het analyseren van de resultaten is de conclusie tot stand gekomen dat gRPC met ProtocolBuffers sneller en performanter is dan REST met Json voor de implementatie van Fashion Society. Op de onderzoeksvraag “Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van de Fashion Society?” kan geen antwoord gegeven worden omdat deze gegevens niet exact meetbaar waren gedurende het uitvoeren van de proof-of-concept.
 %----------------------------------------------------------------------------------------
 %	FORTHCOMING RESEARCH
 %----------------------------------------------------------------------------------------
@@ -140,9 +130,9 @@ on't underestimate the Force. Oh God, my uncle. How am I ever gonna explain this
 \section*{Toekomstig onderzoek}
 \color{black}
 
-I care. So, what do you think of her, Han? No! Alderaan is peaceful. We have no weapons. You can't possibly… I have traced the Rebel spies to her. Now she is my only link to finding their secret base.
+Dit onderzoek heeft zich enkel gericht op de communicatie tussen de Orchestrator API en Discovery API van de Fashion Society. Toekomstig onderzoek kan gedaan worden naar de performantie in communicatie tussen de interne services en de Discovery API voor de huidige REST implementatie en een gRPC implementatie.
 
-Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense. You are a part of the Rebel Alliance and a traitor! Take her away! 
+Alsook kan toekomstig onderzoek gedaan worden naar de winst in performantie bij het omschakelen naar een volledige gRPC structuur waarbij REST en JSON nog amper tot niet meer gebruikt worden. Echter zal dit laatste onderzoek in praktijk moeilijk te behalen zijn door de omvang van het huidige aantal REST services binnen de Fashion Society.
 
 
 %----------------------------------------------------------------------------------------
