--- a/poster/conference_poster.tex
+++ b/poster/conference_poster.tex
@@ -76,7 +76,7 @@
 \color{HoGentAccent1} % Navy color for the abstract
 
 \begin{abstract}
-
+In dit onderzoek worden REST met JSON en gRPC met Protocol Buffers onderzocht en met elkaar vergeleken. Voor het uitvoeren van dit onderzoek wordt gebruik gemaakt van de testserver van de Fashion Society waar de huidige structuur reeds op geïmplementeerd is. De twee structuren worden vergeleken op basis van performantie in twee groeperingen, de kleine payload bestaande uit vierduizend requests en de grote payload bestaande uit tienduizend requests.
 \end{abstract}
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION
