--- a/poster/conference_poster.tex
+++ b/poster/conference_poster.tex
@@ -95,7 +95,7 @@ Momenteel maakt de Fashion Society intern gebruik van eigen microservices met be
 	\captionof{figure}{\color{HoGentAccent5}Fashion Society}
 \end{center}\vspace{1cm}
 
-Dit onderzoek is in opdracht van Fashion Society en de Proof-Of-Concept is opgesteld met bijstand Kristof Van Moorter, Developer voor Fashion Society.
+Dit onderzoek is in opdracht van Fashion Society en de Proof-Of-Concept is opgesteld met bijstand van Kristof Van Moorter, Developer voor Fashion Society.
 %----------------------------------------------------------------------------------------
 %	GEOLOGY
 %----------------------------------------------------------------------------------------
@@ -104,9 +104,9 @@ Dit onderzoek is in opdracht van Fashion Society en de Proof-Of-Concept is opges
 \color{HoGentAccent1} 
 \section*{Onderzoek}
 \color{black}
-Voor deze bachelorproef is er in twee delen gewerkt, namelijk een literatuurstudie waarin de nodige context wordt uitgelegd om deze bachelorproef te kunnen volgen en een tweede deel bestaande uit een Proof-Of-Concept en de bijhorende resultaten.
+Voor deze bachelorproef is er in twee delen gewerkt, namelijk een literatuurstudie waarin de nodige context wordt uitgelegd om deze bachelorproef te kunnen volgen en een tweede deel bestaande uit een proof-of-concept en de bijhorende resultaten.
 
-In de Proof-Of-Concept zijn drie scenario's getest. Het eerste scenario is het verschil in performantie op basis van één enkele call. Deze test is tienduizend keer uitgevoerd om eventuele netwerkvertragingen en dergelijke anomalieën te vermijden.
+In de proof-of-concept zijn drie scenario's getest. Het eerste scenario is het verschil in performantie op basis van één enkele call. Deze test is tienduizend keer uitgevoerd om eventuele netwerkvertragingen en dergelijke anomalieën te vermijden.
 Het tweede scenario is het verschil in performantie op basis van een kleine payload, zijnde vierduizend parallelle calls. Dit scenario is net zoals het derde scenario, het verschil in performantie op basis van een grote payload, zijnde tienduizend parallelle calls, 4 keer uitgevoerd. 
 
 \begin{center}\vspace{1cm}
@@ -122,7 +122,7 @@ Het tweede scenario is het verschil in performantie op basis van een kleine payl
 \color{HoGentAccent1} 
 \section*{Conclusies}
 \color{black}
-Na het uitvoeren van de Proof-Of-Concept en het analyseren van de resultaten is de conclusie tot stand gekomen dat gRPC met ProtocolBuffers sneller en performanter is dan REST met Json voor de implementatie van Fashion Society. Op de onderzoeksvraag “Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van de Fashion Society?” kan geen antwoord gegeven worden omdat deze gegevens niet exact meetbaar waren gedurende het uitvoeren van de proof-of-concept.
+Na het uitvoeren van de proof-of-concept en het analyseren van de resultaten is de conclusie tot stand gekomen dat gRPC met ProtocolBuffers sneller en performanter is dan REST met Json voor de implementatie van Fashion Society. Op de onderzoeksvraag “Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van de Fashion Society?” kan geen antwoord gegeven worden omdat deze gegevens niet exact meetbaar waren gedurende het uitvoeren van de proof-of-concept.
 %----------------------------------------------------------------------------------------
 %	FORTHCOMING RESEARCH
 %----------------------------------------------------------------------------------------
